src/ceal/tests/neg2/153.gold
Error: (line 7:6 'aaa') (line 3:6 'aaa') Macro redefinition
