src/ceal/tests/neg2/153.sct
# double def

.def aaa
.end


.def aaa
.end

